--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -3,7 +3,7 @@ site_name: My Docs
 # defeine TOC or order of website-
 nav:
   - Home: index.md
-  - Page1: Page1.md
+  - Page1: page1.md
 
 site_author: Akash soni
 site_description: >-
